--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://api.tiles.mapbox.com/mapbox-gl-js/v<YOUR_MAPBOX_VERSION>/mapbox-gl.css"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>Random User</title>
   </head>
   <body>
     <div id="root"></div>
